[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "darkshapes", email = "91800957+exdysa@users.noreply.github.com" },
]
description = "Machine Intelligence Resource URI Schema Codebase"
license = { file = "LICENSE" }
name = "MIR"
readme = "README.md"
requires-python = ">= 3.11"
version = "0.0.1"
keywords = ["ML", "AI", "URI", "schema", "diffusion", "LLM", "identification"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.12"]

[project.optional-dependencies]
dev = ["pytest>=8.3.5", "ruff>=0.11.12"]

[project.urls]
Homepage      = "https://github.com/darkshapes/MIR"
Documentation = "https://github.com/darkshapes/sdbx/wiki"

[project.scripts]
mir-maid = "mir.mir_maid:main"
mir-add  = "mir.mir:main"

[tool.setuptools]
packages = ["mir"]

[tool.setuptools.package-data]
mir = ['mir/config/*.json']

[tool.ruff]
line-length    = 140
include        = ["*.py"]
extend-exclude = ["^tests/.*$", "test.*$"]

# [tool.ruff.format]
# exclude = ["*.py"]

[tool.pylint]
max-line-length = 140
ignore-paths    = ["^tests/.*$", "test_.*$"]
disable         = ["C0415"]

[tool.ruff.lint.pycodestyle]
max-line-length               = 140
ignore-overlong-task-comments = true

[tool.typos]
files.extend-exclude = ["^tests/.*$", "test.*$"]
default.extend-words = { "ot" = "ot" }

[tool.uv]
dev-dependencies = ["pytest>=8.3.5", "ruff>=0.11.12"]
